--- a/index.html
+++ b/index.html
@@ -72,36 +72,35 @@ input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
     cursor:pointer;
 }
 
-/* 폴더 UI */
-.folderBtns {
-    display:flex;
-    justify-content:space-between;
-    margin-top:30px;
-}
-.folderBtns button {
-    width:32%;
-    padding:10px;
-    background:#555;
-    color:white;
-    font-weight:bold;
-    border:none;
-    border-radius:6px;
-    cursor:pointer;
-}
-.folderBtns button.active { background:#FFD700; color:black; }
-
-/* 폴더 내용 박스 */
-.folderContent {
-    margin-top:20px;
+/* 회색 네모 박스 */
+.recordBox {
     width:100%;
     max-width:380px;
-    height:150px;
-    background:#777;
-    color:white;
-    display:none;
-    border-radius:6px;
+    height:120px;
+    background:#555; /* 회색 */
+    margin:20px auto 10px auto;
+    border-radius:10px;
     padding:10px;
+    box-sizing:border-box;
+    color:white;
     overflow:auto;
+}
+
+/* 입력칸 */
+.recordInput {
+    width:48%;
+    padding:8px;
+    margin:5px 1%;
+    font-size:16px;
+    border-radius:6px;
+    border:none;
+    text-align:center;
+}
+
+.recordDate {
+    font-size:14px;
+    margin-bottom:5px;
+    display:block;
 }
 </style>
 </head>
@@ -109,7 +108,7 @@ input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
 
 <div class="container">
     <div class="subtitle">"대부분의 문제는 돈이 없어서, 그 외의 문제는 근육이 없어서 생긴다"</div>
-    <h2>1RM 계산기</h2>
+    <h2> 1RM 계산기</h2>
 
     <!-- 탭 -->
     <div class="tab">
@@ -143,19 +142,16 @@ input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
             </tr>
         </table>
 
-        <!-- 3대 기록 저장 버튼 항상 표시 -->
         <button id="save3Btn">3대 기록 저장</button>
-        <div id="save3Result" style="margin-top:10px; font-size:16px;"></div>
 
-        <!-- 폴더 UI -->
-        <div class="folderBtns">
-            <button id="benchFolderBtn">벤치 기록</button>
-            <button id="squatFolderBtn">스쿼트 기록</button>
-            <button id="deadFolderBtn">데드 기록</button>
+        <!-- 기본 회색 네모 박스 -->
+        <div id="recordBox" class="recordBox">
+            <span class="recordDate" id="recordDate"></span>
+            <input type="number" id="recordWeight" class="recordInput" placeholder="무게 kg">
+            <input type="number" id="recordReps" class="recordInput" placeholder="횟수">
         </div>
-        <div id="benchContent" class="folderContent">벤치 기록 내용</div>
-        <div id="squatContent" class="folderContent">스쿼트 기록 내용</div>
-        <div id="deadContent" class="folderContent">데드 기록 내용</div>
+
+        <div id="save3Result" style="margin-top:10px; font-size:16px;"></div>
     </div>
 </div>
 
@@ -171,6 +167,7 @@ input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
 <script>
+// Firebase 설정
 const firebaseConfig = {
     apiKey: "AIzaSyCXn174XsW6ndqaeUpVK6XAAf4MR0-q7_k",
     authDomain: "rmpj-7ca13.firebaseapp.com",
@@ -196,6 +193,7 @@ for (let w=0; w<=250; w+=5){
     option.value = w; option.textContent = w+" kg";
     weightSelect.appendChild(option);
 }
+// 반복수 옵션
 const repsSelect = document.getElementById("reps");
 for (let r=1; r<=10; r++){
     let option = document.createElement("option");
@@ -208,10 +206,7 @@ function calculate1RM(){
     const weight = parseFloat(weightSelect.value);
     const reps = parseInt(repsSelect.value);
     if(!weight || !reps){ 
-        const res = document.getElementById("result");
-        res.innerHTML="무게와 반복수를 입력하세요."; 
-        res.style.opacity = 1;
-        setTimeout(()=>{ res.style.transition="opacity 1s"; res.style.opacity=0; }, 1000);
+        document.getElementById("result").innerHTML="무게와 반복수를 입력하세요."; 
         return; 
     }
     const oneRM = weight*(1+reps*0.0333);
@@ -242,11 +237,13 @@ auth.onAuthStateChanged(user=>{
     if(user){
         googleLoginBtn.style.display="none";
         logoutBtn.style.display="block";
+        save3Btn.style.display="block";
         userInfo.textContent = `${user.displayName} 님`;
         loadLast3Record();
     }else{
         googleLoginBtn.style.display="block";
         logoutBtn.style.display="none";
+        save3Btn.style.display="none";
         userInfo.textContent="";
         document.getElementById("save3Result").textContent="";
     }
@@ -255,10 +252,7 @@ auth.onAuthStateChanged(user=>{
 // 3대 기록 저장
 save3Btn.onclick = async ()=>{
     const user = auth.currentUser;
-    if(!user){
-        alert("로그인이 필요합니다!");
-        return;
-    }
+    if(!user) return;
     const bench = parseInt(document.getElementById("benchRM").value)||0;
     const squat = parseInt(document.getElementById("squatRM").value)||0;
     const dead = parseInt(document.getElementById("deadRM").value)||0;
@@ -300,6 +294,10 @@ document.getElementById("benchRM").addEventListener("input", updateTotal3);
 document.getElementById("squatRM").addEventListener("input", updateTotal3);
 document.getElementById("deadRM").addEventListener("input", updateTotal3);
 
+// 날짜 자동 표시
+const today = new Date().toLocaleDateString();
+document.getElementById("recordDate").textContent = `날짜: ${today}`;
+
 // 탭 기능
 const tabBtns = document.querySelectorAll(".tabBtn");
 const tabContents = document.querySelectorAll(".tabContent");
@@ -313,39 +311,6 @@ tabBtns.forEach(btn=>{
             else tc.classList.remove("active");
         });
     });
-});
-
-// 폴더 버튼 이벤트
-const benchBtn = document.getElementById("benchFolderBtn");
-const squatBtn = document.getElementById("squatFolderBtn");
-const deadBtn = document.getElementById("deadFolderBtn");
-const benchContent = document.getElementById("benchContent");
-const squatContent = document.getElementById("squatContent");
-const deadContent = document.getElementById("deadContent");
-
-benchBtn.addEventListener("click",()=>{
-    benchContent.style.display="block";
-    squatContent.style.display="none";
-    deadContent.style.display="none";
-    benchBtn.classList.add("active");
-    squatBtn.classList.remove("active");
-    deadBtn.classList.remove("active");
-});
-squatBtn.addEventListener("click",()=>{
-    benchContent.style.display="none";
-    squatContent.style.display="block";
-    deadContent.style.display="none";
-    benchBtn.classList.remove("active");
-    squatBtn.classList.add("active");
-    deadBtn.classList.remove("active");
-});
-deadBtn.addEventListener("click",()=>{
-    benchContent.style.display="none";
-    squatContent.style.display="none";
-    deadContent.style.display="block";
-    benchBtn.classList.remove("active");
-    squatBtn.classList.remove("active");
-    deadBtn.classList.add("active");
 });
 
 // 스크롤 시 로그인 숨기기
