--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@ select, button {
     border-radius:10px; border:none; text-align:center;
 }
 button { font-size:20px; background:white; color:black; font-weight:bold; cursor:pointer; }
-
 #result { margin-top:20px; font-size:22px; }
 table { width:100%; margin-top:15px; border-collapse: collapse; }
 table, td { border:1px solid white; }
@@ -58,7 +57,6 @@ table.ThreeRM { margin:auto; width:100%; max-width:380px; }
 table.ThreeRM td { padding:10px; width:33%; }
 input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
 
-/* 3대 기록 저장 버튼 */
 #save3Btn { 
     width:100%; 
     padding:14px; 
@@ -72,35 +70,42 @@ input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
     cursor:pointer;
 }
 
-/* 회색 네모 박스 */
-.recordBox {
-    width:100%;
-    max-width:380px;
-    height:120px;
-    background:#555; /* 회색 */
-    margin:20px auto 10px auto;
-    border-radius:10px;
+/* 폴더 버튼 및 박스 */
+.recordFolders {
+    display:flex;
+    justify-content:space-between;
+    margin-top:30px;
+}
+.folderBtn {
+    flex:1;
+    margin:0 5px;
     padding:10px;
-    box-sizing:border-box;
-    color:white;
-    overflow:auto;
-}
-
-/* 입력칸 */
-.recordInput {
-    width:48%;
-    padding:8px;
-    margin:5px 1%;
-    font-size:16px;
-    border-radius:6px;
     border:none;
-    text-align:center;
+    border-radius:8px;
+    background:#888; /* 비활성 회색 */
+    color:white;
+    font-weight:bold;
+    cursor:pointer;
+}
+.folderBtn.active {
+    background:#FFD700; /* 활성화 색상 */
+}
+.folderContent {
+    display:none;
+    margin-top:15px;
+    width:100%;
+    height:150px;
+    background:#555; /* 회색 박스 */
+    border-radius:8px;
+}
+.folderContent.active {
+    display:block;
 }
 
-.recordDate {
-    font-size:14px;
-    margin-bottom:5px;
-    display:block;
+/* 페이드아웃 메시지 */
+.fadeMessage {
+    opacity: 1;
+    transition: opacity 0.8s ease-out;
 }
 </style>
 </head>
@@ -108,7 +113,7 @@ input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
 
 <div class="container">
     <div class="subtitle">"대부분의 문제는 돈이 없어서, 그 외의 문제는 근육이 없어서 생긴다"</div>
-    <h2> 1RM 계산기</h2>
+    <h2>1RM 계산기</h2>
 
     <!-- 탭 -->
     <div class="tab">
@@ -141,17 +146,19 @@ input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
                 <td><input type="number" id="deadRM" class="rmInput" placeholder="kg" min="0"></td>
             </tr>
         </table>
-
         <button id="save3Btn">3대 기록 저장</button>
-
-        <!-- 기본 회색 네모 박스 -->
-        <div id="recordBox" class="recordBox">
-            <span class="recordDate" id="recordDate"></span>
-            <input type="number" id="recordWeight" class="recordInput" placeholder="무게 kg">
-            <input type="number" id="recordReps" class="recordInput" placeholder="횟수">
-        </div>
-
         <div id="save3Result" style="margin-top:10px; font-size:16px;"></div>
+
+        <!-- 폴더 버튼 -->
+        <div class="recordFolders">
+            <button class="folderBtn active" data-target="benchBox">벤치 기록</button>
+            <button class="folderBtn" data-target="squatBox">스쿼트 기록</button>
+            <button class="folderBtn" data-target="deadBox">데드 기록</button>
+        </div>
+        <!-- 폴더 박스 -->
+        <div id="benchBox" class="folderContent active"></div>
+        <div id="squatBox" class="folderContent"></div>
+        <div id="deadBox" class="folderContent"></div>
     </div>
 </div>
 
@@ -167,7 +174,6 @@ input.rmInput { width:80px; height:40px; font-size:18px; text-align:center; }
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
 <script>
-// Firebase 설정
 const firebaseConfig = {
     apiKey: "AIzaSyCXn174XsW6ndqaeUpVK6XAAf4MR0-q7_k",
     authDomain: "rmpj-7ca13.firebaseapp.com",
@@ -193,7 +199,6 @@ for (let w=0; w<=250; w+=5){
     option.value = w; option.textContent = w+" kg";
     weightSelect.appendChild(option);
 }
-// 반복수 옵션
 const repsSelect = document.getElementById("reps");
 for (let r=1; r<=10; r++){
     let option = document.createElement("option");
@@ -205,12 +210,15 @@ for (let r=1; r<=10; r++){
 function calculate1RM(){
     const weight = parseFloat(weightSelect.value);
     const reps = parseInt(repsSelect.value);
+    const resultDiv = document.getElementById("result");
     if(!weight || !reps){ 
-        document.getElementById("result").innerHTML="무게와 반복수를 입력하세요."; 
+        resultDiv.innerHTML="무게와 반복수를 입력하세요."; 
+        fadeOut(resultDiv);
         return; 
     }
     const oneRM = weight*(1+reps*0.0333);
-    document.getElementById("result").innerHTML = `예상 1RM: <b>${oneRM.toFixed(1)} kg</b>`;
+    resultDiv.innerHTML = `예상 1RM: <b>${oneRM.toFixed(1)} kg</b>`;
+    fadeOut(resultDiv);
 
     let html = `<table><tr><th>RM</th><th>무게 (kg)</th></tr>`;
     for(let r=1;r<=10;r++){
@@ -219,6 +227,15 @@ function calculate1RM(){
     }
     html += `</table>`;
     document.getElementById("tableArea").innerHTML = html;
+}
+
+// 메시지 페이드아웃 함수
+function fadeOut(element){
+    element.classList.add("fadeMessage");
+    setTimeout(()=>{
+        element.style.opacity = 0;
+        setTimeout(()=>{ element.innerHTML=""; element.style.opacity=1; element.classList.remove("fadeMessage"); }, 800);
+    }, 1000);
 }
 
 // Google 로그인
@@ -239,6 +256,7 @@ auth.onAuthStateChanged(user=>{
         logoutBtn.style.display="block";
         save3Btn.style.display="block";
         userInfo.textContent = `${user.displayName} 님`;
+
         loadLast3Record();
     }else{
         googleLoginBtn.style.display="block";
@@ -294,10 +312,6 @@ document.getElementById("benchRM").addEventListener("input", updateTotal3);
 document.getElementById("squatRM").addEventListener("input", updateTotal3);
 document.getElementById("deadRM").addEventListener("input", updateTotal3);
 
-// 날짜 자동 표시
-const today = new Date().toLocaleDateString();
-document.getElementById("recordDate").textContent = `날짜: ${today}`;
-
 // 탭 기능
 const tabBtns = document.querySelectorAll(".tabBtn");
 const tabContents = document.querySelectorAll(".tabContent");
@@ -309,6 +323,21 @@ tabBtns.forEach(btn=>{
         tabContents.forEach(tc=>{
             if(tc.id===target) tc.classList.add("active");
             else tc.classList.remove("active");
+        });
+    });
+});
+
+// 폴더 버튼 기능
+const folderBtns = document.querySelectorAll(".folderBtn");
+const folderContents = document.querySelectorAll(".folderContent");
+folderBtns.forEach(btn=>{
+    btn.addEventListener("click", ()=>{
+        folderBtns.forEach(b=>b.classList.remove("active"));
+        btn.classList.add("active");
+        const target = btn.dataset.target;
+        folderContents.forEach(fc=>{
+            if(fc.id === target) fc.classList.add("active");
+            else fc.classList.remove("active");
         });
     });
 });
