--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body {
     padding: 70px 20px 20px 20px;
 }
 .container { max-width: 400px; margin: auto; }
-.subtitle { font-size:16px; margin-bottom: 20px; }
+.subtitle { font-size:16px;  margin-top: 40px; margin-bottom: 20px; }
 
 select, button {
     width:100%; padding:14px; margin:10px 0; font-size:18px;
