--- a/index.html
+++ b/index.html
@@ -4,53 +4,74 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>1RM 계산기 + 3대 기록표</title>
-
 <style>
 body {
     background: black;
     color: white;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
     text-align: center;
-    padding: 70px 20px 20px;
+    padding: 70px 20px 20px 20px;
 }
 .container { max-width: 400px; margin: auto; }
-.subtitle { font-size:16px; margin:40px 0 20px; }
+.subtitle { font-size:16px;  margin-top: 40px; margin-bottom: 20px; }
 
 select, button {
-    width:100%; padding:14px; margin:10px 0;
-    font-size:18px; border-radius:10px; border:none;
+    width:100%; padding:14px; margin:10px 0; font-size:18px;
+    border-radius:10px; border:none; text-align:center;
 }
-button { background:white; color:black; font-weight:bold; cursor:pointer; }
+button { font-size:20px; background:white; color:black; font-weight:bold; cursor:pointer; }
+#result { margin-top:20px; font-size:22px; }
+table { width:100%; margin-top:15px; border-collapse: collapse; }
+table, td { border:1px solid white; }
+td { padding:8px; text-align:center; }
 
-.tab { display:flex; gap:10px; justify-content:center; margin-bottom:20px; }
-.tab button { background:#333; color:white; }
+#loginArea {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    padding: 8px;
+    background: rgba(0,0,0,0.5);
+    border-radius: 8px;
+}
+#loginArea button { padding: 8px 12px; font-size: 13px; border-radius:6px; }
+#userInfo { font-size:12px; color:#fff; text-align:center; }
+
+.tab { display:flex; justify-content:center; gap:10px; margin-bottom:20px; }
+.tab button { padding:10px 20px; border:none; border-radius:8px; background:#333; color:white; font-weight:bold; }
 .tab button.active { background:#FFD700; color:black; }
 
 .tabContent { display:none; }
 .tabContent.active { display:block; }
 
-#total3 { font-size:28px; font-weight:bold; color:#FFD700; margin-bottom:15px; }
+#total3 { font-size:28px; font-weight:bold; margin-bottom:15px; color:#FFD700; }
 
-table { width:100%; border-collapse:collapse; }
-td { border:1px solid white; padding:8px; }
+table.ThreeRM { margin:auto; width:100%; max-width:380px; }
+table.ThreeRM td { padding:10px; width:33%; }
+input.rmInput { width:100%; height:40px; font-size:18px; text-align:center; background:transparent; color:#fff; }
 
-input.rmInput {
-    width:100%; height:40px; font-size:18px;
-    background:transparent; color:white; text-align:center;
+#save3Btn { padding:14px; font-size:18px; border-radius:10px; background:white; font-weight:bold; }
+
+.recordFolders { display:flex; justify-content:center; gap:10px; margin-top:20px; }
+.folderBtn { padding:10px; border-radius:8px; background:#333; color:white; font-weight:bold; }
+.folderBtn.active { background:#FFD700; color:black; }
+
+.folderContent {
+    display:none; margin-top:15px; height:150px;
+    background:#555; border-radius:8px; padding:10px; overflow:auto;
 }
+.folderContent.active { display:block; }
 
-#loginArea {
-    position:fixed; top:10px; left:10px;
-    background:rgba(0,0,0,.6); padding:8px; border-radius:8px;
-}
-#loginArea button { font-size:12px; padding:6px; }
-#userInfo { font-size:12px; margin-top:4px; }
+.recordFormRow { display:flex; gap:8px; margin-top:12px; }
+.recordFormRow input, .recordFormRow button { padding:8px; border-radius:6px; }
 
-.fade { transition:opacity .8s; }
+.fade { transition: opacity 0.8s ease; }
 </style>
 </head>
-
 <body>
+
 <div class="container">
     <div class="subtitle">"대부분의 문제는 돈이 없어서, 그 외의 문제는 근육이 없어서 생긴다"</div>
 
@@ -60,8 +81,8 @@ input.rmInput {
     </div>
 
     <div id="tab1" class="tabContent active">
-        <select id="weight"><option value="">무게</option></select>
-        <select id="reps"><option value="">횟수</option></select>
+        <select id="weight"><option value="">무게 선택</option></select>
+        <select id="reps"><option value="">반복수 선택</option></select>
         <button id="goBtn">GO</button>
         <div id="result"></div>
         <div id="tableArea"></div>
@@ -69,13 +90,12 @@ input.rmInput {
 
     <div id="tab2" class="tabContent">
         <div id="total3">3대: 0 kg</div>
-
-        <table>
+        <table class="ThreeRM">
             <tr><td>벤치</td><td>스쿼트</td><td>데드</td></tr>
             <tr>
-                <td><input id="benchRM" class="rmInput" type="number"></td>
-                <td><input id="squatRM" class="rmInput" type="number"></td>
-                <td><input id="deadRM" class="rmInput" type="number"></td>
+                <td><input id="benchRM" type="number"></td>
+                <td><input id="squatRM" type="number"></td>
+                <td><input id="deadRM" type="number"></td>
             </tr>
         </table>
 
@@ -86,7 +106,7 @@ input.rmInput {
 
 <div id="loginArea">
     <button id="googleLoginBtn">Google 로그인</button>
-    <button id="logoutBtn" style="display:none">로그아웃</button>
+    <button id="logoutBtn" style="display:none;">로그아웃</button>
     <div id="userInfo"></div>
 </div>
 
@@ -100,68 +120,56 @@ firebase.initializeApp({
     authDomain: "rmpj-7ca13.firebaseapp.com",
     projectId: "rmpj-7ca13"
 });
-
 const auth = firebase.auth();
 const db = firebase.firestore();
 
 const benchRM = document.getElementById('benchRM');
 const squatRM = document.getElementById('squatRM');
-const deadRM  = document.getElementById('deadRM');
-const total3  = document.getElementById('total3');
-const save3Btn = document.getElementById('save3Btn');
+const deadRM = document.getElementById('deadRM');
+const total3 = document.getElementById('total3');
 const save3Result = document.getElementById('save3Result');
 
-[benchRM, squatRM, deadRM].forEach(i =>
-    i.addEventListener('input', () => {
-        total3.textContent =
-            `3대: ${(benchRM.value|0)+(squatRM.value|0)+(deadRM.value|0)} kg`;
-    })
-);
-
-save3Btn.addEventListener('click', async () => {
-    const user = auth.currentUser;
-    if (!user) return msg('로그인 후 저장하세요');
-
-    const data = {
-        bench: benchRM.value|0,
-        squat: squatRM.value|0,
-        dead: deadRM.value|0,
-        total: (benchRM.value|0)+(squatRM.value|0)+(deadRM.value|0),
-        updatedAt: firebase.firestore.FieldValue.serverTimestamp()
-    };
-
-    if (data.total === 0) return msg('값을 입력하세요');
-
-    try {
-        await db
-          .collection('users')
-          .doc(user.uid)
-          .collection('threeRM')
-          .doc('current')
-          .set(data);
-
-        msg('3대 기록 저장 완료!');
-    } catch (e) {
-        console.error(e);
-        msg('저장 실패');
-    }
+[benchRM, squatRM, deadRM].forEach(el=>{
+    el.addEventListener('input', ()=>{
+        total3.textContent = `3대: ${(benchRM.value|0)+(squatRM.value|0)+(deadRM.value|0)} kg`;
+    });
 });
 
-function msg(t){
-    save3Result.textContent = t;
-    save3Result.style.opacity = 1;
-    setTimeout(()=>save3Result.style.opacity=0,1200);
+document.getElementById('save3Btn').addEventListener('click', async ()=>{
+    const user = auth.currentUser;
+    if(!user) return showMsg('로그인 필요');
+
+    const bench = benchRM.value|0;
+    const squat = squatRM.value|0;
+    const dead = deadRM.value|0;
+
+    await db.collection('users')
+      .doc(user.uid)
+      .collection('threeRM')
+      .doc('current')
+      .set({
+        bench, squat, dead,
+        total: bench+squat+dead,
+        updatedAt: firebase.firestore.FieldValue.serverTimestamp()
+      });
+
+    showMsg('3대 기록 저장 완료!');
+});
+
+function showMsg(m){
+    save3Result.textContent=m;
+    setTimeout(()=>save3Result.textContent='',1500);
 }
 
-document.getElementById('googleLoginBtn').onclick = () =>
+document.getElementById('googleLoginBtn').onclick=()=>{
     auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
-
-document.getElementById('logoutBtn').onclick = () => auth.signOut();
+};
+document.getElementById('logoutBtn').onclick=()=>auth.signOut();
 
 auth.onAuthStateChanged(u=>{
-    document.getElementById('googleLoginBtn').style.display = u?'none':'block';
-    document.getElementById('logoutBtn').style.display = u?'block':'none';
-    document.getElementById('userInfo').textContent = u?u.displayName:'';
+    document.getElementById('googleLoginBtn').style.display=u?'none':'block';
+    document.getElementById('logoutBtn').style.display=u?'block':'none';
+    document.getElementById('userInfo').textContent=u?u.email:'';
 });
 </script>
 </body>
